--- a/task4/docker-compose.yaml
+++ b/task4/docker-compose.yaml
@@ -12,11 +12,16 @@ services:
       - 3306:3306
     volumes:
       - ./scripts/CREATE.sql:/docker-entrypoint-initdb.d/create.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 15
 
   init-db:
     build: ./DostavimVse
     depends_on:
-      - db
+      db:
+       condition: service_healthy
     ports:
       - 8080:8080      
 
