--- a/task3/conf/default.conf
+++ b/task3/conf/default.conf
@@ -28,7 +28,7 @@
     SSLCertificateFile      /etc/ssl/certs/apache-selfsigned.crt
     SSLCertificateKeyFile /etc/ssl/private/apache-selfsigned.key
 
-    <FilesMatch "\.(cgi|shtml|phtml|php)$">
+    <FilesMatch "\.(cgi|shtml|phtml|php|py)$">
         SSLOptions +StdEnvVars
     </FilesMatch>
     <Directory /usr/lib/cgi-bin>
